syntax = "proto3";

service UserProto {
  rpc getUsers(EmptyUser) returns (GetUsersResponseDto);
  rpc getUser(UserId) returns (UserDto);
  rpc getUserBySlug(UserId) returns (UserDto);
  rpc getUserByEmail(UserByEmailDto) returns (UserDto);
  rpc getUserByUrlString(UserUrlString) returns (UserDto);
  rpc createUser(CreateUserDto) returns (UserDto);
  rpc updateUser(UpdateUserDto) returns (UserDto);
  rpc deleteUser(UserId) returns (DeleteUserResponseDto);
}

message UserUrlString {
  string urlString = 1;
}

message UserByEmailDto {
  string email = 1;
}

message GetUsersResponseDto {
  repeated UserDto users = 1;
}

message DeleteUserResponseDto {
  bool success = 1;
}

message EmptyUser {}

message UserId {
  string id = 1;
}

message UpdateUserDto {
    string id = 1;
    string email = 2;
    string role = 3;
    string permissions = 4;
    string urlString = 5;
    ProfileDto profile = 6;
    string created_at = 7;
    string updated_at = 8;
}

message CreateUserDto {
    string email = 1;
    string password = 2;
}

message UserDto {
  string id = 1;
  string email = 2;
  string password = 3;
  string role = 4;
  string permissions = 5;
  string urlString = 6;
  ProfileDto profile = 7;
  string created_at = 8;
  string updated_at = 9;
}

message ProfileDto {
  string id = 1;
  string ownerId = 2;
  string firstName = 3;
  string lastName = 4;
  string dateOfBirth = 5;
  string profession = 6;
  string employer = 7;
  string dateHired = 8;
  string employmentStatus = 9;
  string relationshipStatus = 10;
  string profilePhoto = 11;
  string bannerImage = 12;
  string hometown = 13;
  string city = 14;
  string province = 15;
  string country = 16;
  string language = 17;
  string mobilePhone = 18;
  string visibility = 19;
  string createdAt = 20;
  string updatedAt = 21;
}
